WIP with fxml file